# Quickstart2025

./: .gitignore  README.md  pyproject.toml  requirements-squlearn.txt  requirements.txt
notebooks/: 0 - Qubits and gates.ipynb  0.1 - Adiabatic Quantum Computing.ipynb  0.2 - Limits for simulation.ipynb  1 - Quantum embeddings.ipynb  1.1 - Target alignment on quantum kernels.ipynb  2 - Dimensionality reduction.ipynb  2.1 - Dimensionality reduction using NNs.ipynb  2.2 - Hand digit use case.ipynb  3 - Computing derivatives.ipynb  3.1 - Trainable embeddings.ipynb  3.2 - Trainable Kernels and classical models.ipynb  4 - Quantum Neural Networks.ipynb
